--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,7 @@ on:
       - main
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
-  workflow_dispatch:
-    inputs:
-      sync:
-        description: File synchronization
-        required: true
-        default: delta
+
 jobs:
   deploy:
     name: Deploy to GitHub Pages
@@ -21,6 +16,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: yarn
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Build website
